tests/fail/semantics/invalid_index_non_array/main.kira
struct Box {
    var value: Int
}

@Main
function main() {
    var box = Box { value: 1 }
    box.value[0] = 2
    return
}

